# mrcpp_public

./: .gitignore  CMakeLists.txt  README.md  main.py  process_results.py  pyproject.toml
Experiments/experiments_benchmark/Island/: config.yaml  request.json
Experiments/experiments_benchmark/Island/mrcpp_results/: path_1.csv  path_2.csv
Experiments/experiments_benchmark/cape/: config.json  config.yaml  mrcpp_basic.xml  request.json
Experiments/experiments_benchmark/cape/mrcpp_results/: path_1.csv
Experiments/experiments_benchmark/complex_12/: config.json  config.yaml  request.json
Experiments/experiments_benchmark/complex_12/mrcpp_results/: path_2.csv  path_3.csv
Experiments/experiments_benchmark/complex_22/: config.json  config.yaml  request.json
Experiments/experiments_benchmark/complex_22/mrcpp_results/: path_2.csv  path_3.csv
Experiments/experiments_benchmark/island/: config.json  config.yaml  request.json  start_point.csv
Experiments/experiments_benchmark/island/mrcpp_results/: path_1.csv  path_2.csv
Experiments/experiments_benchmark/rect/: config.yaml  request.json
Experiments/experiments_benchmark/simple/: config.json  config.yaml  request.json
Experiments/experiments_benchmark/simple/mrcpp_results/: path_3.csv
Experiments/experiments_benchmark/wetland/: config.json  config.yaml  fly_zone.csv  no_fly_zone_0.csv  request.json  start_point.csv
Experiments/experiments_scale/cape_10/: config.json  config.yaml  request.json
Experiments/experiments_scale/cape_10/mrcpp_results/: path_10.csv  path_2.csv  path_3.csv  path_5.csv  path_9.csv
Experiments/experiments_scale/cape_4/: config.json  config.yaml  request.json
Experiments/experiments_scale/cape_4/mrcpp_results/: path_1.csv  path_3.csv  path_4.csv
Experiments/experiments_scale/cape_6/: config.json  config.yaml  request.json
Experiments/experiments_scale/cape_6/mrcpp_results/: path_2.csv  path_4.csv
Experiments/experiments_scale/cape_8/: config.json  config.yaml  request.json
Experiments/experiments_scale/cape_8/mrcpp_results/: path_1.csv  path_3.csv  path_4.csv  path_5.csv  path_6.csv  path_7.csv
Experiments/experiments_scale/complex_10/: config.json  config.yaml  request.json
Experiments/experiments_scale/complex_10/mrcpp_results/: path_1.csv  path_4.csv  path_7.csv  path_9.csv
Experiments/experiments_scale/complex_4/: config.json  config.yaml  request.json
Experiments/experiments_scale/complex_4/mrcpp_results/: path_1.csv  path_2.csv
Experiments/experiments_scale/complex_5/: config.json  config.yaml  request.json
Experiments/experiments_scale/complex_5/mrcpp_results/: path_2.csv  path_4.csv  path_5.csv
Experiments/experiments_scale/complex_6/: config.json  config.yaml  request.json
Experiments/experiments_scale/complex_6/mrcpp_results/: path_1.csv  path_2.csv  path_3.csv  path_4.csv  path_5.csv  path_6.csv
Experiments/experiments_scale/complex_7/: config.json  config.yaml  request.json
Experiments/experiments_scale/complex_7/mrcpp_results/: path_1.csv  path_4.csv  path_7.csv
Experiments/experiments_scale/complex_8/: config.json  config.yaml  request.json
Experiments/experiments_scale/complex_8/mrcpp_results/: path_1.csv  path_4.csv  path_5.csv  path_6.csv  path_7.csv
Experiments/experiments_scale/complex_9/: config.json  config.yaml  request.json
Experiments/experiments_scale/complex_9/mrcpp_results/: path_1.csv  path_2.csv  path_5.csv  path_6.csv  path_8.csv
analysis/: combine_routes.py  plot_ablation_headland.py  process_results.py  run_ablation.sh  setup_results.sh  visualize_paths.py  visualize_routes.py
config/: mrcpp_bt_ablation.xml
executables/: energy_estimator  mrcpp_config.xml
include/btnodes/: bt_headers.h  bt_nodes.hpp
include/btnodes/planner/: ObstacleAvoidance.h  PathAccumulator.h  PathPlanner.h  RouteGenerator.h  TaskPlanner.h
include/btnodes/preprocess/: ConvertToGpsPath.h  DataLoader.h  FileReader.h  GpsDecoder.h  ServerRequest.h
include/btnodes/swath/: OffsetPolygon.h  SwathGenerator.h  SwathGeneratorDisjoint.h
include/cppvisgraph/: visible_vertices.hpp
include/mrcpp/: MinRect.h  RoutePlanner.h
include/mrcpp/utils/: GpsPoint.h
include/mtsp/: mTSP.h
include/mtsp/LKH/: LKH.h
include/nlohmann/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
include/wykobi/: wykobi.inl
interface/: energy_estimator.cpp  mrcpp_ablation.cpp  mrcpp_basic.cpp
planner_data/planner_paths_with_start_end/Island/darp/: darp_map.html  energy_estimation_with_initial_location.txt  nice_8_map.html  solver_output.txt  uav_0.csv  uav_1.csv  uav_2.csv
planner_data/planner_paths_with_start_end/Island/eamcmp/: eamcmp_map.html  energy_estimation_with_initial_location.txt  nice_8_map.html  path_0.csv  path_1.csv  path_2.csv
planner_data/planner_paths_with_start_end/Island/mrcpp/: energy_estimation_with_initial_location.txt  mrcpp_map.html  path_1.csv  path_3.csv
planner_data/planner_paths_with_start_end/Island/popcorn/: energy_estimation_with_initial_location.txt  nice_8_map.html  popcorn_map.html  route_1.csv  route_2.csv
planner_data/planner_paths_with_start_end/cape/darp/: darp_map.html  energy_estimation_with_initial_location.txt  solver_output.txt  uav_0.csv  uav_1.csv  uav_2.csv
planner_data/planner_paths_with_start_end/cape/eamcmp/: eamcmp_map.html  energy_estimation_with_initial_location.txt  path_0.csv  path_1.csv  path_2.csv
planner_data/planner_paths_with_start_end/cape/mrcpp/: energy_estimation_with_initial_location.txt  mrcpp_map.html  path_2.csv  path_3.csv
planner_data/planner_paths_with_start_end/cape/popcorn/: combined_route_1.csv  combined_route_2.csv  combined_route_3.csv  energy_estimation_with_initial_location.txt  popcorn_map.html
planner_data/planner_paths_with_start_end/complex_12/darp/: darp_map.html  energy_estimation_with_initial_location.txt  solver_output.txt  uav_0.csv  uav_1.csv  uav_2.csv
scripts/: energy_topra.py
src/metric/: EnergyCalculator.cpp  utils.cpp
src/mrcpp/: MinRect.cpp  ObstacleAvoidance.cpp  RayCasting.cpp  SwathGenerator.cpp
src/mtsp/: mTSP.cpp
(+382 files in other folders)
